* remove build_doc target for setup.py, use sphinx (see builddocs pipeline)

v1.7.4, 2022-10-31

* fix data type casting of cch1,2 in QConversion.init_area -> these can now be floating point values (#141 by @trdd)
* fix docstring for March-Dollase texture model in xu.simpack.Powder. The
  parameter preferred_orientation_factor was described wrong. Platy crystals
  need a factor < 1! see W. A. Dollase, J. Appl. Cryst. (1986). 19, 267-272
* fix Poisson ratio of GaInAs Darwin model (thanks to Danny Chrastina for
  reporting)
* Additional convenience functions for elasticity tensor symmetries for
  Monoclinic and Trigonal symmetry (#138 by @f-iniv)
* GetStrain and GetStress functions for xu.material.Material (#138 by @f-iniv)
* enable correct parsing of Seifert RSM map measurements
* matplotlib format bugfix in psd_chdeg
* improvements for kappa goniometers
* remove use of deprecated scipy namespace

v1.7.3, 2021-11-26

* enable building Python 3.10 wheels
* fix missing files in source package on PyPI
* make builddocs pipeline more robust

v1.7.2, 2021-11-22

* fix returned fitting error in area_detector_calib* (issue #126)
* remove dependency on soon deprecated distutils
* fix regression bug with matplotlib 3.5
* update copyright notices from git commit history
* fix code error found by linting (flake8)
* CIF atom type normalization of oxidation state (issue #122)
* improve documentation of PowerModel multiprocessing code (issue #121)
* fix numpy-1.20 deprecation warnings
* bugfix in kinematical diffraction model.
* add visualization of individual layer densities (issue #107)
* new coplanar_alphaf helper function

v1.7.1, 2021-01-02

* harmonize dependency versions between README and setup.py
* remove PDF documentation and other generatable content from the GIT
  repository
* new azure pipeline for documentation generation
* new azure pipeline for wheel generation (issue #111)

v1.7.0, 2020-12-08

* allow string decoding to fail in tif headers