@@ -8,42 +8,23 @@ trigger:
     include:
       - v*
 
-resources:
-  repositories:
-  - repository: tox
-    type: github
-    endpoint: github
-    name: tox-dev/azure-pipelines-template
-    ref: master
 
 jobs:
-- template: run-tox-env.yml@tox
+- template: templates/testing_job.yml
   parameters:
-    tox_version: 'tox tox-wheel'
-    jobs:
-      py310:
-        before:
-          - task: Cache@2
-            inputs:
-              key: testdata20190812
-              path: $(System.DefaultWorkingDirectory)/tests/data
-              cacheHitVar: TESTDATA_RESTORED
-            displayName: Cache test data
-          - script: |
-              curl -s -L https://sourceforge.net/projects/xrayutilities/files/xrayutilities-testdata-20190812.tar.gz -o xu_testdata.tar.gz
-              tar xzf xu_testdata.tar.gz -C tests
-            condition: ne(variables.TESTDATA_RESTORED, 'true')
-            displayName: Download test data
-        image: [linux, windows, macOs]
-      py39:
-        image: [linux, windows, macOs]
-      py38:
-        image: [linux, windows, macOs]
-      py37:
-        image: [linux, windows, macOs]
-    coverage:
-      with_toxenv: 'coverage'
-      for_envs: [py37, py38, py39, py310]
+    name: Linux
+    vmImage: 'ubuntu-latest'
+
+- template: templates/testing_job.yml
+  parameters:
+    name: macOS
+    vmImage: 'macOS-latest'
+
+- template: templates/testing_job.yml
+  parameters:
+    name: Windows
+    vmImage: 'windows-latest'
+
 
 schedules:
 - cron: "0 4 1 * *"
