@@ -1,0 +1,59 @@
+parameters:
+- name: name
+  default: ''
+- name: vmImage
+  default: ''
+
+jobs:
+- job: ${{ parameters.name }}
+  pool:
+    vmImage: ${{ parameters.vmImage }}
+  strategy:
+    matrix:
+      Python37:
+        python.version: '3.7'
+      Python38:
+        python.version: '3.8'
+      Python39:
+        python.version: '3.9'
+      Python310:
+        python.version: '3.10'
+
+  steps:
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '$(python.version)'
+  - task: Cache@2
+    inputs:
+      key: testdata20190812
+      path: $(System.DefaultWorkingDirectory)/tests/data
+      cacheHitVar: TESTDATA_RESTORED
+    condition: and(succeeded(), eq(variables['python.version'], '3.10'))
+    displayName: Cache test data
+  - script: |
+      curl -s -L https://sourceforge.net/projects/xrayutilities/files/xrayutilities-testdata-20190812.tar.gz -o xu_testdata.tar.gz
+      tar xzf xu_testdata.tar.gz -C tests
+    condition: and(succeeded(), ne(variables['TESTDATA_RESTORED'], 'true'), eq(variables['python.version'], '3.10'))
+    displayName: Download test data
+  - script: |
+      pip install -r recommended_requirements.txt
+    displayName: Install requirements
+  - script: |
+      pip install coverage[toml] pytest pytest-cov pytest-azurepipelines
+    displayName: Install test requirements
+  - script: |
+      pip install .[plot,fit]
+    displayName: Install xrayutilities
+  - script: |
+      pytest --junitxml=junit/test-results.xml --cov --cov-config pyproject.toml --cov-report=xml
+    displayName: Run pytest
+  - task: PublishTestResults@2
+    condition: succeededOrFailed()
+    inputs:
+      testResultsFiles: '**/test-*.xml'
+      testRunTitle: 'Publish test results for Python $(python.version)'
+  - task: PublishCodeCoverageResults@1
+    inputs:
+      codeCoverageTool: Cobertura
+      summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
+
